# blog-api-prosig

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
core/: asgi.py  settings.py  urls.py  wsgi.py
fixtures/: admin_user.json  test_data.json
posts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py
requirements/: base.in  base.txt  dev.in  dev.txt
scripts/: nginx.conf
tests/posts/: conftest.py  test_models.py  test_serializers.py  test_token.py  test_views.py
